# bvbrc-agents

./: .gitignore  AGENTS.md  setup.sh
agents/data_agent/: __init__.py  __main__.py  agent.py  chat.py  data_types.xlsx  llm_client.py  models.py  tool_registry.py
agents/service_agent/: __init__.py  agent.py  (+7 more)
config/: llm.yaml  llm_config.py
mcp_server/: .mcpbignore  bvbrc_login_and_setup.py  http_server.py  requirements.txt  start_http_server.sh  test_rag_api.py
orchestrator/: pyproject.toml
orchestrator/config/: agents.yaml
orchestrator/orchestrator/: __init__.py  __main__.py  config.py  models.py  orchestrate.py  server.py
orchestrator/orchestrator/events/: __init__.py  events.py  stream.py
orchestrator/orchestrator/executor/: __init__.py  agent_executor.py  executor.py
orchestrator/orchestrator/llm/: __init__.py  client.py  config.py
orchestrator/orchestrator/mcp/: client.py
orchestrator/orchestrator/registry/: __init__.py  agent_handle.py  agent_registry.py
orchestrator/orchestrator/router/: __init__.py  models.py  prompts.py  router.py
orchestrator/orchestrator/synthesizer/: __init__.py  prompts.py  synthesizer.py
orchestrator/scripts/: chat.py  start_agents.py  start_orchestrator.sh  test_connectivity.py
orchestrator/tests/: test_config.py  test_events.py  test_executor.py  test_mcp_client.py  test_orchestrate.py  test_prompts.py  test_registry.py  test_router.py  test_server.py  test_synthesizer.py
self_evolving_agents/: PLAN.md  PROMPT_MCP_CONSOLIDATION.md  STARTUP.md  evolution_config.yaml
shared/: agent_messages.py  agent_utils.py
(+77 files in other folders)
