[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bvbrc-orchestrator"
version = "0.1.0"
description = "Multi-agent orchestrator for BV-BRC Copilot"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.0",
    "mcp>=1.20.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "rich>=14.0.0",
    "pyyaml>=6.0",
    "openai>=1.30.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
